--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,9 @@
+<!--index.html--> 
 <!DOCTYPE html>
 <html>
 <head>
     <title>Recipe Sharing Platform</title>
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='index.css') }}">
 </head>
 <body>
     <h1>Welcome to the Recipe Sharing Platform!</h1>
