--- a/templates/submit_recipe.html
+++ b/templates/submit_recipe.html
@@ -1,7 +1,9 @@
+<!--submit_recipe.html--> 
 <!DOCTYPE html>
 <html>
 <head>
     <title>Submit a New Recipe</title>
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='submit.css') }}">
 </head>
 <body>
     <h1>Submit a New Recipe</h1>
