--- a/templates/view_recipe.html
+++ b/templates/view_recipe.html
@@ -1,7 +1,9 @@
+<!--view_recipe.html--> 
 <!DOCTYPE html>
 <html>
 <head>
     <title>{{ recipe.title }}</title>
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='view.css') }}">
 </head>
 <body>
     <h1>{{ recipe.title }}</h1>
